# django-model-clone-

./: README.md  pyproject.toml
django_model_clone/: mixins.py
